# pentago-python

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
pentago/exceptions/: exceptions.py
pentago/objects/: Board.py  Move.py  Status.py
src/pentago/: exceptions.py
src/pentago/exceptions/: exceptions.py
src/pentago/gameplay/: status.py
src/pentago/objects/: Board.py  Move.py  board.py  move.py
tests/: test_move.py
