[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pentago"
version = "0.0.1-0"
authors = [
  { name="Marcus Harbol", email="none@gmail.com" },
]
description = "A Pentago engine written purely in Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mharbol/pentago-python"
